# blok-mcp

./: .gitignore  README.md  pyproject.toml  render.yaml
src/blok_mcp/: __init__.py  __main__.py  config.py  http_server.py  mcp_server.py
src/blok_mcp/auth/: __init__.py  authenticator.py  session.py
src/blok_mcp/client/: __init__.py  api_client.py
