[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blok-mcp"
version = "0.1.0"
description = "MCP Server for Blok experiments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Blok Intelligence", email = "support@joinblok.co" }
]
keywords = ["mcp", "blok", "experiments", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyngrok>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
blok-mcp = "blok_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/blok-intelligence/blok-mcp"
Documentation = "https://github.com/blok-intelligence/blok-mcp#readme"
Repository = "https://github.com/blok-intelligence/blok-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/blok_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
